# api-generator

./: ..gitignore.swp  README.md  report.md  requirements.txt
api_generator_sdk/: README.md  __init__.py  django_gen.py  exceptions.py  fastapi_gen.py  generator.py  nlp_core.py  pyproject.toml
api_generator_sdk/api_generator_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: ARCHITECTURE.md  COMPLETE_PROJECT_CONTEXT.md  Complete API Generator Codebase - Package Contents.md  overall-report.md  🚀 Complete Beginner's Guide to the NLP-Powered API Generator.md
nlp_api_generator/: README.md  api_generator.py  demo.sh  django_generator.py  fastapi_generator.py  nlp_extractor.py  project_analyzer.py  simple_fastapi_generator.py
